[gd_scene load_steps=3 format=3 uid="uid://ck80miwxghn1p"]

[ext_resource type="Theme" uid="uid://di3dmoihncqyo" path="res://assets/main_theme.tres" id="1_k6ylb"]
[ext_resource type="Script" path="res://scenes/UI/title_menu.gd" id="2_coycg"]

[node name="TitleMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_k6ylb")
script = ExtResource("2_coycg")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 32.0
offset_bottom = 61.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "游戏标题"
horizontal_alignment = 1

[node name="V" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -4.0
offset_right = 32.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="V"]
layout_mode = 2
text = "开始游戏"

[node name="Load" type="Button" parent="V"]
layout_mode = 2
text = "读取存档"

[node name="Exit" type="Button" parent="V"]
layout_mode = 2
text = "退出游戏"

[connection signal="pressed" from="V/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="V/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="V/Exit" to="." method="_on_exit_pressed"]
